# QtClient

./: .gitignore  CMakeLists.txt  Home.rar  LICENSE  README.md
DataView/: CMakeLists.txt  DataView.json  dataview.cpp  dataview.h  readme.md  resource.qrc
DataView/ui/: DataWidgets.cpp  DataWidgets.h  DataWidgets.ui  snowbeerwindow.cpp  snowbeerwindow.h  snowbeerwindow.ui
MediaPlayer/: CMakeLists.txt  MediaPlayer.json  MediaWidget.ui  mediaplayer.cpp  mediaplayer.h  readme.md  resource.qrc
MediaPlayer/ui/: MediaWidgets.cpp  MediaWidgets.h  MediaWidgets.ui  videowindow.cpp  videowindow.h  videowindow.ui
QtClient/: CMakeLists.txt  FirstShowWidget.cpp  FirstShowWidget.h  FirstShowWidget.ui  PluginInterface.h  QtClient_zh_CN.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  resource.qrc
QtClient/doc/: dev.md  通信.txt
QtClient/i18n/: QtClient_zh_CN.qm
QtClient/modules/: FilesUtil.cpp  FilesUtil.h  FilesUtil.ui
QtClient/public/: AppData.h  AppOS.h  AppSystem.cpp  AppSystem.h
QtClient/ui/: DataView.cpp  DataView.h  DataView.ui  SubMain.cpp  SubMain.h  SubMain.ui  TitleBar.cpp  TitleBar.h  TitleBar.ui  VideoPlayback.h  VideoPlayback.ui  VideopPayback.cpp  WidgetHeader.cpp  WidgetHeader.h  WidgetHeader.ui  subwindow.cpp  subwindow.h  subwindow.ui
ShunDe/: CMakeLists.txt  ShunDe.cpp  ShunDe.h  ShunDe.json  readme.md  resource.qrc
ShunDe/doc/: dev.md
ShunDe/function/: inspection.cpp  inspection.h  inspection.json  inspection.ui  worker_inspection_thread.cpp  worker_inspection_thread.h
ShunDe/modules/: HikVisionCamera.cpp  HikVisionCamera.h  HikVisionCamera.ui  camera.cpp  camera.h  camera.ui  camerawidget.cpp  camerawidget.h  camerawidget.ui  robot.cpp  robot.h  robot.ui
ShunDe/ui/: HomeWidgets.cpp  HomeWidgets.h  HomeWidgets.ui  HomeWindow.cpp  HomeWindow.h  HomeWindow.ui  MasterWindow.cpp  MasterWindow.h  MasterWindow.ui  camerawidget.h
public/: AppOS.h  AppUtil.cpp  AppUtil.h  PluginInterface.h
public/modules/: FilesUtil.cpp  FilesUtil.h  FilesUtil.ui  httpserver.cpp  httpserver.h  sqlite.cpp  sqlite.h  sqlite.ui
public/widgets/: ellipsewidget.cpp  ellipsewidget.h  maplabel.cpp  maplabel.h  slider.cpp  slider.h  toolbutton.cpp  toolbutton.h  videowidget.cpp  videowidget.h
scripts/: csvFileToExcel.py  cv2capture.json  cv2capture.py  httpServer.py
